--- a/my-port/package.json
+++ b/my-port/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "https:\/\/lucasrosendo.github.io/app-toot-name",
+  "homepage": "https:\/\/username.github.io/app-toot-name",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
